# xplane12-empty-plugin

./: CMakeLists.txt  LICENSE  README.md  build-and-install.sh
src/: CMakeLists.txt  main.cpp
